# pytsune

./: LICENSE  PR_DESCRIPTION.md  README.md  __init__.py  __main__.py  fast_grpc.proto  install.sh  pyproject.toml  scaffold.py  setup.py  test.py
__pycache__/: scaffold.d.er
app/: facade.py
app/__pycache__/: facade.d.er
app/airflow/: __init__.py  dag.py
app/airflow/__pycache__/: dag.d.er
app/airflow/etl/: dag_etl.py  operators.py  stubs.py
app/cli/: __init__.py  main.py
app/cli/__pycache__/: main.d.er
app/gui/: __init__.py  main.py
app/gui/presenters/: __init__.py  main_presenter.py
app/gui/views/: __init__.py  main_view.py
app/lib/: main.py
app/lib/__pycache__/: main.d.er
app/robyn/: dependencies.py  main.py
app/robyn/api/: routes.py
app/telegram/: __init__.py  main.py  middlewares.py
app/web/: __init__.py  main.py
core/: __init__.py
docs/: architecture.canvas  overview.md
infrastructure/: container.py  queue.py  startup.py
infrastructure/config/: settings.py
infrastructure/db/: __init__.py  db.py
infrastructure/logging/: __init__.py
src/pytsune/: __init__.py  builders.py  mapping.py  models.py  template.proto.j2  template.py.j2  types.py  utils.py
tests/airflow/: test_etl_operators.py  test_operators.py
tests/gui/: test_presenter.py
tests/integration/: test_cli.py  test_container.py  test_lib.py  test_scaffold.py
tests/telegram/: test_adapter.py  test_handlers.py
tests/unit/: test_cli_args.py  test_cli_autodiscover.py  test_facade.py  test_item.py  test_lib.py  test_scaffold.py  test_use_cases.py
(+44 files in other folders)
